GNOME Bugzilla – Bug 790329
xvimageallocator: Fix build warning error
Last modified: 2017-12-06 20:30:24 UTC
Fix unused variable build error if HAVE_XSHM is undefined
Created attachment 363587 [details] [review] xvimageallocator: Fix build warning error
Attachment 363587 [details] pushed as e1e46b6 - xvimageallocator: Fix build warning error
Thanks, also added to 1.12 branch: commit 5adc9b1d2f28c6ce298229c45347d4f2ea2d47fb (HEAD -> 1.12, origin/1.12) Author: Seungha Yang <pudding8757@gmail.com> Date: Tue Nov 14 23:07:26 2017 +0900 xvimageallocator: Fix build warning error Fix unused variable build error if HAVE_XSHM is undefined https://bugzilla.gnome.org/show_bug.cgi?id=790329